Change bd settings

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -23,7 +23,7 @@ spring:
         type: com.zaxxer.hikari.HikariDataSource
         url: jdbc:mysql://localhost:3306/jh441?useUnicode=true&characterEncoding=utf8&useSSL=false
         username: root
-        password:
+        password: sq15+
         hikari:
             data-source-properties:
                 cachePrepStmts: true
